--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -3,14 +3,6 @@
 /*========================
 	@Media запросы
 	========================*/
-@media only screen and (max-width: 1280px)
-	/**/
-
-@media only screen and (max-width: 992px)
-	/**/
-
-@media only screen and (max-width: 768px)
-	/**/
-
-@media only screen and (max-width: 480px)
-	/**/
+@media only screen and (max-width: 1099px)
+	body
+		width: 1114px
