--- a/sass/main.sass
+++ b/sass/main.sass
@@ -20,6 +20,8 @@
 	  border: none
 	section
 		position: relative
+	p
+		line-height: 1.5
 	.CENTERER
 		width: 1099px
 		margin: 0 auto
@@ -142,13 +144,6 @@
 					padding: 15px 0
 					transition: all .25s ease
 					background-color: #EAEAF0
-					&:hover
-						background-color: #fff
-						color: $blue
-						svg
-							path
-								transition: all .25s ease
-								fill: $blue
 					svg
 						margin-right: 11px
 						path
@@ -498,6 +493,7 @@
 				left: 50%
 				bottom: -12px
 				transform: translate(-50%, 100%)
+				font-family: ArialMT, sans-serif
 				font-size: 12px
 				color: #a4a4bb
 				text-transform: uppercase
@@ -705,8 +701,6 @@
 						border-color: transparent !important
 					a
 						border-right: 1px solid #c2c2c2
-						&:hover
-							border-color: transparent
 				&:not(:first-of-type)
 					a
 						position: relative
@@ -720,8 +714,6 @@
 							position: absolute
 							top: 0
 							bottom: 0
-						&:hover:before
-							background-color: #fff
 					.tab_common__nuv_active
 						&:before
 							background-color: #fff
@@ -747,8 +739,7 @@
 				border: 2px solid $blue
 				transition: all .25s ease
 				&:hover
-					color: #fff
-					background-color: $blue
+					background-color: #F2F3F9
 				&:not(:last-of-type)
 					margin-right: 16px
 			.send_application
@@ -977,12 +968,13 @@
 				&:not(:last-of-type)
 					margin-right: 29px
 				a
+					text-decoration: none
 					font-family: ArialMT, sans-serif
 					font-size: 14px
-					color: $blue
-				a.all_books__nuv_active
-					text-decoration: none
 					color: #c0c0c0
+				a.all_books__nuv_active
+					text-decoration: underline
+					color: $blue
 	&__filter_flex
 		display: flex
 		justify-content: space-between
@@ -1139,16 +1131,19 @@
 		transform: translateY(-50%)
 	input
 		border: none
+		cursor: pointer
 		width: 140px
 		height: 28px
 		line-height: 28px
 		border-radius: 3px
 		border: 1px solid #e6e6e6
-		background-color: #ffffff
+		background-color: transparent
 		font-family: ArialMT, sans-serif
 		font-size: 14px
 		color: #000000
 		padding: 0 8px
+		position: relative
+		z-index: 2
 
 .datapicker_wrp_active
 	&:before
@@ -1345,8 +1340,7 @@ div.datedropper .picker .pick-lg ul li
 				border: 2px solid $blue
 				transition: all .25s ease
 				&:hover
-					color: #fff
-					background-color: $blue
+					background-color: #F8F9FB
 				&:not(:last-of-type)
 					margin-right: 16px
 			button.active_btn
@@ -1361,20 +1355,6 @@ div.datedropper .picker .pick-lg ul li
 				font-weight: bold
 				font-family: ArialMTBold, sans-serif
 				font-size: 18px
-		&_finished
-			ul
-				display: flex
-				li
-					&:not(:last-of-type)
-						margin-right: 41px
-					p
-						font-family: ArialMT, sans-serif
-						font-size: 11px
-						color: #a4a4bb
-						margin-bottom: 6px
-					span
-						font-family: ArialMT, sans-serif
-						font-size: 14px
 		&_current
 			margin-bottom: 18px
 			ul
@@ -1467,6 +1447,78 @@ div.datedropper .picker .pick-lg ul li
 				margin-right: 5px
 		.circle_grey
 			background-color: #eee
+
+.popup
+	width: 100%
+	height: 100%
+	position: fixed !important
+	top: 0
+	right: 0
+	bottom: 0
+	left: 0
+	z-index: 9
+	display: none
+	&__mask
+		width: 100%
+		height: 100%
+		position: fixed
+		top: 0
+		right: 0
+		bottom: 0
+		left: 0
+		background-color: rgba(0,0,0,.8)
+	&__content
+		width: 525px
+		background-color: #fff
+		position: absolute
+		left: 50%
+		top: 50%
+		transform: translate(-50%, -50%)
+		padding: 27px 27px 21px 27px
+	&__form
+		label
+			font-family: TrebuchetMS, sans-serif
+			font-size: 14px
+			color: #b1b1b1
+			line-height: 24px
+		textarea
+			border: none
+			outline: none
+			box-sizing: border-box
+			width: 100%
+			height: 120px
+			border: 1px solid #e6e6e6
+			padding: 15px 12px
+			border-radius: 3px
+			font-family: ArialMT, sans-serif
+			font-size: 14px
+			margin-bottom: 16px
+			&::placeholder
+				color: #bdbdbd
+				font-style: italic
+		&_actions
+			width: 100%
+			display: flex
+			justify-content: center
+			align-items: center
+			button
+				font-family: TrebuchetMS, sans-serif
+				font-size: 14px
+				color: $blue
+				padding: 9px 26px
+				border: 2px solid $blue
+				transition: all .25s ease
+				&:hover
+					background-color: #F2F3F9
+				&:not(:last-of-type)
+					margin-right: 14px
+			button.popup__form_btn_save
+				background-color: $blue
+				color: #fff
+
+
+
+
 
 
 @import "_media"
