--- a/sass/_fonts.sass
+++ b/sass/_fonts.sass
@@ -1,8 +1,3 @@
 @import "mixins/_font-face"
 
-@include font-face("ArialMT")
-@include font-face("ArialMTBold")
-@include font-face("PragmaticaSlabBook")
-@include font-face("PragmaticaSlabBold")
-@include font-face("PragmaticaSlabExtraLight")
-@include font-face("TrebuchetMS")
+@include font-face("Roboto")
