--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -12,6 +12,8 @@
 		padding-right: 0
 	.header__menu
 		display: none
+	.header_slider
+		background: #000
 	.header__middle
 		.to_mobile_menu
 			display: block
@@ -65,4 +67,6 @@
 
 @media only screen and (max-width: 480px)
 	.last_projects__previes img
+		width: 100%
+	.page img
 		width: 100%
