--- a/css/main.css
+++ b/css/main.css
@@ -212,7 +212,7 @@ section {
 
 .header__menu > ul li:hover .sub-menu {
   opacity: 1;
-  z-index: 1;
+  z-index: 4;
   top: 18px;
 }
 
@@ -229,6 +229,8 @@ section {
   -webkit-transition: all .25s ease;
   -o-transition: all .25s ease;
   transition: all .25s ease;
+  position: relative;
+  z-index: 5;
 }
 
 .header__menu > ul li .sub-menu {
@@ -322,6 +324,7 @@ section {
   -webkit-background-size: cover;
           background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   padding-top: 133px;
 }
 
@@ -479,6 +482,10 @@ section {
   line-height: 26px;
 }
 
+.about p:not(:last-of-type) {
+  margin-bottom: 15px;
+}
+
 .last_projects {
   padding: 80px 0;
   background-color: #F4F7FC;
@@ -531,9 +538,6 @@ section {
 
 .last_projects__body h3 {
   margin-bottom: 8px;
-}
-
-.last_projects__body h3 a {
   text-decoration: none;
   font-size: 22px;
   color: #fff;
@@ -542,9 +546,6 @@ section {
 
 .last_projects__body p {
   margin-bottom: 10px;
-}
-
-.last_projects__body p a {
   text-decoration: none;
   color: #fff;
   font-size: 14px;
@@ -582,7 +583,8 @@ section {
 }
 
 .footer {
-  padding: 20px 0 40px 0;
+  height: 78px;
+  line-height: 78px;
   background-color: #292929;
   text-align: center;
 }
@@ -603,6 +605,68 @@ section {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
+.other_page .header__top {
+  position: static;
+  background-color: #000;
+}
+
+.other_page .header__middle {
+  position: static;
+  padding: 15px 0;
+  background-color: #292929;
+}
+
+.other_page .header__middle .sub-menu li a {
+  background-color: #171717;
+}
+
+.other_page main {
+  padding: 50px 0;
+}
+
+.page p {
+  font-size: 15px;
+  color: #666;
+  line-height: 23px;
+  margin-bottom: 15px;
+}
+
+.page p a {
+  text-decoration: none;
+  color: #008ed6;
+}
+
+.page p a:hover {
+  text-decoration: underline;
+}
+
+.page h3 {
+  font-weight: bold;
+  color: #303745;
+  margin-bottom: 15px;
+  font-size: 17px;
+}
+
+.page .CENTERER > img {
+  width: 400px;
+  float: right;
+}
+
+.page h6 img {
+  width: 400px;
+  float: left;
+}
+
+.page h5 {
+  clear: both;
+  margin-bottom: 15px;
+}
+
+.page a img {
+  display: block;
+  margin: 0 auto;
+}
+
 /*========================
 	@Media запросы
 	@mixin =======================*/
@@ -618,6 +682,9 @@ section {
   }
   .header__menu {
     display: none;
+  }
+  .header_slider {
+    background: #000;
   }
   .header__middle .to_mobile_menu {
     display: block;
@@ -696,6 +763,9 @@ section {
 
 @media only screen and (max-width: 480px) {
   .last_projects__previes img {
+    width: 100%;
+  }
+  .page img {
     width: 100%;
   }
 }
