--- a/sass/main.sass
+++ b/sass/main.sass
@@ -90,7 +90,7 @@ section
 					overflow: visible
 					.sub-menu
 						opacity: 1
-						z-index: 1
+						z-index: 4
 						top: 18px
 					&>a
 						color: $blue
@@ -101,6 +101,8 @@ section
 					font-size: 16px
 					color: #fff
 					transition: all .25s ease
+					position: relative
+					z-index: 5
 				.sub-menu
 					width: 240px
 					display: block
@@ -141,7 +143,6 @@ section
 			left: auto
 			right: 20px
 
-
 .header_slider
 	height: 100%
 	.slick-list 
@@ -155,6 +156,7 @@ section
 		justify-content: center
 		background-size: cover
 		background-repeat: no-repeat
+		background-position: center
 		padding-top: 133px
 		&:before
 			content: ''
@@ -273,6 +275,8 @@ section
 		font-size: 15px
 		color: #666
 		line-height: 26px
+		&:not(:last-of-type)
+			margin-bottom: 15px
 
 .last_projects
 	padding: 80px 0
@@ -304,18 +308,16 @@ section
 				color: $blue
 		h3
 			margin-bottom: 8px
-			a
-				text-decoration: none
-				font-size: 22px
-				color: #fff
-				line-height: 1.1
+			text-decoration: none
+			font-size: 22px
+			color: #fff
+			line-height: 1.1
 		p
 			margin-bottom: 10px
-			a
-				text-decoration: none
-				color: #fff
-				font-size: 14px
-				line-height: 1.5
+			text-decoration: none
+			color: #fff
+			font-size: 14px
+			line-height: 1.5
 		&__more
 			text-decoration: none
 			text-transform: uppercase
@@ -338,7 +340,8 @@ section
 				transition: all .25s ease-in-out
 
 .footer
-	padding: 20px 0 40px 0
+	height: 78px
+	line-height: 78px
 	background-color: #292929
 	text-align: center
 	a
@@ -354,6 +357,54 @@ section
 	bottom: 50px
 	right: 50px
 	background-color: rgba(0,0,0,0.2)
+
+.other_page
+	.header
+		&__top
+			position: static
+			background-color: #000
+		&__middle
+			position: static
+			padding: 15px 0
+			background-color: #292929
+			.sub-menu
+				li
+					a
+						background-color: #171717
+	main
+		padding: 50px 0
+
+.page
+	p
+		font-size: 15px
+		color: #666
+		line-height: 23px
+		margin-bottom: 15px
+		a
+			text-decoration: none
+			color: $blue
+			&:hover
+				text-decoration: underline
+	h3
+		font-weight: bold
+		color: #303745
+		margin-bottom: 15px
+		font-size: 17px
+	.CENTERER
+		&>img
+			width: 400px
+			float: right
+	h6
+		img
+			width: 400px
+			float: left
+	h5
+		clear: both
+		margin-bottom: 15px
+	a
+		img
+			display: block
+			margin: 0 auto
 
 
 @import "_media"
